fix(carousel indicators): z index so it goes behind controls

--- a/css/style.css
+++ b/css/style.css
@@ -9043,76 +9043,77 @@ a.a2a_i, i.a2a_i {
 .carousel .carousel-indicators {
   bottom: 20px;
   margin-bottom: 0;
-  max-width: 1170px; }
-  /* line 63, ../scss/fxj/_bootstrap-carousel.scss */
+  max-width: 1170px;
+  z-index: 1; }
+  /* line 64, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-indicators li {
     width: 20px;
     height: 20px;
     border-radius: 10px;
     margin-right: 5px; }
-    /* line 68, ../scss/fxj/_bootstrap-carousel.scss */
+    /* line 69, ../scss/fxj/_bootstrap-carousel.scss */
     .carousel .carousel-indicators li:hover, .carousel .carousel-indicators li:focus, .carousel .carousel-indicators li.active {
       background-color: #16a085; }
-/* line 75, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 76, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel .carousel-control {
   opacity: 1;
   filter: alpha(opacity=100);
   background: transparent none; }
-  /* line 79, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 80, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control .glyphicon {
     width: 40px;
     height: 40px;
     border: 1px solid white;
     border-radius: 20px;
     font-size: 20px; }
-    /* line 85, ../scss/fxj/_bootstrap-carousel.scss */
+    /* line 86, ../scss/fxj/_bootstrap-carousel.scss */
     .carousel .carousel-control .glyphicon:before {
       margin-top: 8px;
       display: block; }
-    /* line 89, ../scss/fxj/_bootstrap-carousel.scss */
+    /* line 90, ../scss/fxj/_bootstrap-carousel.scss */
     .carousel .carousel-control .glyphicon-chevron-left, .carousel .carousel-control .glyphicon-chevron-right {
       top: auto;
       bottom: 20px; }
-  /* line 98, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 99, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control:hover .glyphicon, .carousel .carousel-control:focus .glyphicon {
     background-color: white;
     color: #16a085; }
-/* line 107, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 108, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel-fade .carousel-inner .item {
   transition-property: opacity; }
-/* line 111, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 112, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel-fade .carousel-inner .item,
 .carousel-fade .carousel-inner .active.left,
 .carousel-fade .carousel-inner .active.right {
   opacity: 0; }
-/* line 117, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 118, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel-fade .carousel-inner .active,
 .carousel-fade .carousel-inner .next.left,
 .carousel-fade .carousel-inner .prev.right {
   opacity: 1; }
-/* line 123, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 124, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel-fade .carousel-inner .next,
 .carousel-fade .carousel-inner .prev,
 .carousel-fade .carousel-inner .active.left,
 .carousel-fade .carousel-inner .active.right {
   left: 0;
   transform: translate3d(0, 0, 0); }
-/* line 132, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 133, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel-fade .carousel-control {
   z-index: 2; }
 
 @media (min-width: 1200px) {
-  /* line 141, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 142, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .item img {
     left: auto; }
-  /* line 145, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 146, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-container {
     margin-right: calc((100% - 1170px )/2);
     margin-left: calc((100% - 1170px)/2); }
-  /* line 149, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 150, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control.right {
     right: calc((100% - 1170px )/2); }
-  /* line 152, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 153, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control.left {
     left: calc((100% - 1170px )/2); } }
 /* line 1, ../scss/fxj/_views.scss */
